# zk-solvency

./: .gitignore  Cargo.toml  README.md  deployment.json  proof.json
contracts/: README.md  foundry.toml
contracts/broadcast/Deploy.s.sol/11155111/: run-1777345392996.json  run-1777346725741.json  run-latest.json
contracts/broadcast/Submit.s.sol/11155111/: run-1777348501266.json
contracts/script/: Deploy.s.sol  Submit.s.sol
contracts/src/: SolvencyAttestation.sol
contracts/test/: SolvencyAttestation.t.sol
crates/bench/: Cargo.toml
crates/bench/src/: main.rs
crates/data-gen/: Cargo.toml
crates/data-gen/src/: main.rs
crates/inclusion/: Cargo.toml
crates/inclusion/src/: main.rs
crates/program/: Cargo.toml  rust-toolchain.toml
crates/program/.cargo/: config.toml
crates/program/src/: main.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  merkle.rs
docs/: benchmarks.md  implementation-plan.md  overview.md  presentation.md  progress.md
script/: Cargo.toml
script/src/: bench.rs  main.rs  test_insolvency.rs
web/: package-lock.json  package.json
web/_components/: InclusionChecker.tsx
web/_lib/: merkle.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/verify/: route.ts
