[workspace]
members  = ["."]
resolver = "2"

[package]
name    = "script"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "script"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"

[[bin]]
name = "test-insolvency"
path = "src/test_insolvency.rs"

[dependencies]
sp1-sdk    = { version = "6.1.0", default-features = false, features = ["network"] }
types      = { path = "../crates/types" }
serde_json = "1"
hex        = "0.4"
tokio      = { version = "1", features = ["full"] }

