[package]
name    = "inclusion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inclusion"
path = "src/main.rs"

[dependencies]
types      = { path = "../types" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
clap       = { version = "4", features = ["derive"] }
hex        = "0.4"
